--- a/client/styles/ProgressBar.scss
+++ b/client/styles/ProgressBar.scss
@@ -5,7 +5,7 @@
 }
 
 #nprogress .bar {
-    background: #29d;
+    background: $pink;
     position: fixed;
     z-index: 1031;
     top: 0;
@@ -32,7 +32,7 @@
 /* Remove these to get rid of the spinner */
 
 #nprogress .spinner {
-    display: block;
+    display: none;
     position: fixed;
     z-index: 1031;
     top: 15px;
